2001-08-23  John Harper  <jsh@pixelslut.com>

	* sawfish/wm/commands.jl (no-operation): new command. Fixes
	8463

	* sawfish/wm/state/configure.jl (configure-request-handler):
	don't allow the window to be moved or resized when it's
	maximized. Fixes 8410

	* sawfish/wm/state/maximize.jl (window-locked-vertically-p,
	window-locked-horizontally-p): new functions

	* sawfish/wm/placement.jl (place-window-randomly): removed
	bogus middle cases from from x and y position calculations.
	Fixes 8415

	* sawfish/wm/ext/match-window.jl
	(match-window-grab-x-property): take a symbol with the actual
	name of the X property, not one of the strings in the
	match-window-x-properties list

Sat Aug 18 16:32:37 2001  Owen Taylor  <otaylor@redhat.com>

	* sawfish/wm/windows.jl: Offset windows properly whose gravity
	point is centered horizontally or vertically.

2001-07-23  John Harper  <jsh@pixelslut.com>

	* sawfish/wm/state/gnome.jl (gnome-event-proxyer): fixed bug
	caused by Click1 events now printing as Click. This caused only
	button-release events to be proxied

2001-07-02  John Harper  <jsh@pixelslut.com>

	* version 0.99

2001-06-18  John Harper  <jsh@pixelslut.com>

	* sawfish/wm/menus.jl (menu-program-stays-running): by popular
	demand this now defaults to `t'

	* sawfish/wm/windows.jl (focus-desktop): new command, focuses
	the desktop window if one exists

2001-06-04  John Harper  <jsh@pixelslut.com>

	* sawfish/wm/commands/move-resize.jl (do-move-resize): move the
	call to draw-window-outline to immediately before entering the
	recursive event loop (avoids drawing and not erasing it on a
	non-viable drag)

2001-05-04  John Harper  <jsh@eazel.com>

	* sawfish/wm/state/gnome.jl (gnome-event-proxyer): support
	`OffN' events
	* sawfish/wm/util/decode-events.jl: ditto

	* sawfish/wm/keymaps.jl (title-keymap): bind
	toggle-window-shaded to an X-Off2 binding instead of X-Click2

2001-04-22  John Harper  <jsh@eazel.com>
