@@ -1,3 +1,8 @@
+2001-08-24  John Harper  <jsh@pixelslut.com>
+
+	* sawfish/wm/menus.jl: ensure menu-process is nil after being
+	killed. Also, never try to kill it unless it's non-nil
+
 2001-08-23  John Harper  <jsh@pixelslut.com>
 
 	* sawfish/wm/commands.jl (no-operation): new command. Fixes
